@@ -22,7 +22,7 @@ import fm.last.musicbrainz.coverart.CoverArtImage;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.sql.Connection;
 import java.util.ArrayList;
@@ -793,7 +793,7 @@ public class CoverArtArchiveUtil extends CoverUtil {
 					}
 
 					try {
-						HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+						HttpURLConnection connection = (HttpURLConnection) URI.create(url).toURL().openConnection();
 						connection.setRequestProperty("Accept-Charset", StandardCharsets.UTF_8.name());
 						int status = connection.getResponseCode();
 						if (status != 200) {
