@@ -33,6 +33,7 @@ import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.net.MalformedURLException;
 import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
@@ -749,7 +750,7 @@ public class ContentDirectoryHandler implements HttpHandler {
 			String cb = soapaction.replace("<", "").replace(">", "");
 
 			try {
-				URL soapActionUrl = new URL(cb);
+				URL soapActionUrl = URI.create(cb).toURL();
 				String addr = soapActionUrl.getHost();
 				int port = soapActionUrl.getPort();
 				try (
@@ -768,7 +769,7 @@ public class ContentDirectoryHandler implements HttpHandler {
 					out.write(CRLF.getBytes(StandardCharsets.UTF_8));
 					out.flush();
 				}
-			} catch (MalformedURLException ex) {
+			} catch (IllegalArgumentException | MalformedURLException ex) {
 				LOGGER.debug("Cannot parse address and port from soap action \"" + soapaction + "\"", ex);
 			}
 		} else {
